[WEB-317]: [Style] Fix overflow for opened content in drawer

--- a/src/app/public/shared/components/filters/components/abstract-select-filter/select-filter-template/select-filter-template.component.scss
+++ b/src/app/public/shared/components/filters/components/abstract-select-filter/select-filter-template/select-filter-template.component.scss
@@ -26,6 +26,11 @@ $toolbar-height: 70px;
     z-index: 1;
   }
 
+  &__content--open {
+    max-height: calc(100% - #{$toolbar-height});
+    overflow-y: scroll;
+  }
+
   &__title {
     font-weight: bold;
   }
